--- a/index.html
+++ b/index.html
@@ -17,10 +17,16 @@
 </head>
 <body>
   <div id="tsparticles"></div>
+  <div class="guide-pill">
+      <a href="https://ibm-my.sharepoint.com/:w:/r/personal/samarpan_sinha_ibm_com/Documents/GUIDE%20BOOK.docx?d=w586052fbb4ca44d3bcff71800125624b&csf=1&web=1&e=VW4sM0"
+         target="_blank">
+          📘 Guide Book
+      </a>
+  </div>
   <div class="container" id="app">
     <!-- SPA content will be rendered here -->
-	
   </div>
   <script src="app.js"></script>
 </body>
 </html>
+
